--- a/Angular/clientes-app/src/app/appComponent/app.component.html
+++ b/Angular/clientes-app/src/app/appComponent/app.component.html
@@ -3,6 +3,7 @@
 <app-header></app-header>
 <span>{{ title }} app is running!</span>
 <p>Creado por {{nombre}}</p>
+<app-clientes></app-clientes>
 <app-footer> </app-footer>
 
 
