se agrega   <router-outlet></router-outlet>

--- a/Angular/clientes-app/src/app/appComponent/app.component.html
+++ b/Angular/clientes-app/src/app/appComponent/app.component.html
@@ -1,9 +1,9 @@
-
-
 <app-header></app-header>
-<app-clientes></app-clientes>
-<app-footer> </app-footer>
 
+<div class="container my-3">
+    <!-- router-outle es una directiva en Angular que se utiliza para indicar dónde
+        se deben renderizar los componentes que corresponden a las rutas definidas en la aplicación. -->
+  <router-outlet></router-outlet> 
+</div>
 
-  
-
+<app-footer></app-footer>
