--- a/Angular/clientes-app/src/app/clientes/clientes.component.html
+++ b/Angular/clientes-app/src/app/clientes/clientes.component.html
@@ -3,6 +3,9 @@
   <div class="card-body text-primary">
     <h5 class="card-title">Listado de clientes</h5>
 
+    <div >
+      <button class="btn  btn-rounded btn-primary" type="button" [routerLink]="['/clientes/form']" > Crear Cliente</button>
+    </div>
     <table class="table table-bordered table-striped">
       <thead>
         <tr>
