--- a/Angular/clientes-app/src/app/clientes/form.component.html
+++ b/Angular/clientes-app/src/app/clientes/form.component.html
@@ -1,7 +1,8 @@
 <p>{{titulo}}</p>
 <!-- El evento (ngSubmit) se utiliza para detectar cuando se envía el formulario y llama al método que se requiera definido en el component.ts. 
 La directiva #clienteForm="ngForm" se utiliza para crear una referencia al formulario en el componente. -->
-<form (ngSubmit)="createCliente()" #clienteForm="ngForm">
+<!-- (ngSubmit)="createCliente()" -->
+<form  #clienteForm="ngForm">
     <!-- La directiva [(ngModel)] se utiliza para enlazar el valor del campo de entrada a la propiedad nombre del objeto cliente.
         La propiedad required se utiliza para indicar que el campo es obligatorio. -->
     <div class="form-group">
@@ -20,6 +21,12 @@ La directiva #clienteForm="ngForm" se utiliza para crear una referencia al formu
         La directiva [disabled] se utiliza para deshabilitar el botón si el formulario no es válido.
         El botón Cancelar se utiliza para volver a la lista de clientes utilizando la directiva routerLink. -->
         <!-- [disabled]="!clienteForm.form.valid"  -->
-    <button type="submit" class="btn btn-primary" >Guardar</button>
+
+<!-- Si el id es nulo, se muestra el botón de "Guardar". Si el id no es nulo, se oculta el botón de "Guardar" y se muestra el botón de "Actualizar" utilizando la plantilla elseBlock. -->
+        <!-- elseBlock es el nombre de la plantilla  -->
+    <button  class="btn btn-primary" (click)="createCliente()" *ngIf="!cliente.id else elseBlock"  >Guardar</button>
+    <ng-template #elseBlock>
+        <button type="submit" class="btn btn-primary" (click)="update()" >Actualizar</button>
+    </ng-template>
     <a routerLink="/clientes" class="btn btn-danger">Cancelar</a>
 </form>
