--- a/Angular/clientes-app/src/app/header/header.component.html
+++ b/Angular/clientes-app/src/app/header/header.component.html
@@ -3,6 +3,11 @@
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
+  <style>
+    form {
+      display: flex;
+    }
+  </style>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
@@ -33,9 +38,12 @@
         <a class="nav-link disabled" href="#">Disabled</a>
       </li>
     </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-5" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-43 my-sm-23" type="submit">Search</button>
+
+    <form class="form-inline my-4 my-lg-3">
+      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+      <button class="btn btn-outline-success my-5 my-sm-0" type="submit">Search</button>
     </form>
+
   </div>
 </nav>
+
