Ajustando algunos estilos

--- a/Angular/clientes-app/src/app/appComponent/app.component.html
+++ b/Angular/clientes-app/src/app/appComponent/app.component.html
@@ -1,6 +1,6 @@
 <app-header></app-header>
 
-<div class="container my-3">
+<div class="container my-3 wrap">
     <!-- router-outle es una directiva en Angular que se utiliza para indicar dónde
         se deben renderizar los componentes que corresponden a las rutas definidas en la aplicación. -->
   <router-outlet></router-outlet> 
