Se muestra el nombre del autor

--- a/Angular/clientes-app/src/app/footer/footer.component.html
+++ b/Angular/clientes-app/src/app/footer/footer.component.html
@@ -1,1 +1,11 @@
-<p>Creado por {{author.name }}</p>
+<footer class="footer bg-dark rounded-top text-center">
+    <div class="container py-2">
+        <p class="text-white my-2">
+            {{ author.fecha}}
+          </p>
+      <p class="text-white my-2">
+        &copy; {{ author.name + ' ' + author.lastname}}
+      </p>
+    </div>
+  </footer>
+  
