--- a/Angular/clientes-app/src/app/clientes/clientes.component.html
+++ b/Angular/clientes-app/src/app/clientes/clientes.component.html
@@ -3,9 +3,13 @@
   <div class="card-body text-primary">
     <h5 class="card-title">Listado de clientes</h5>
 
-    <div >
-      <button class="btn  btn-rounded btn-primary" type="button" [routerLink]="['/clientes/form']" > Crear Cliente</button>
+    
+    <div class="my-2 text-left">
+      <button class="btn btn-rounded btn-primary" type="button" [routerLink]="['/clientes/form']">
+        Crear Cliente
+      </button>
     </div>
+
     <table class="table table-bordered table-striped">
       <thead>
         <tr>
@@ -26,10 +30,10 @@
           <td>{{ cliente.email }}</td>
           <td>{{ cliente.createAt }}</td>
           <td>
-            <button type="button" name="button" [routerLink]="['/clientes/form',cliente.id]" class="btn btn-primary btn-small"> Editar </button>
+            <button type="button" name="button" [routerLink]="['/clientes/form',cliente.id]" class="btn btn-primary btn-sm"> Editar </button>
           </td>
           <td>
-            <button type="button" name="button" (click)="delete(cliente)" class="btn btn-danger btn-small"> Eliminar </button>
+            <button type="button" name="button" (click)="delete(cliente)" class="btn btn-danger btn-sm"> Eliminar </button>
         </tr>
       </tbody>
     </table>
