--- a/Angular/clientes-app/src/app/header/header.component.html
+++ b/Angular/clientes-app/src/app/header/header.component.html
@@ -21,7 +21,7 @@
       </li>
       <!-- Cliente page -->
       <li class="nav-item" routerLinkActive="active">
-        <a class="nav-link" routerLink="/clientes/page">Clientes page</a>
+        <a class="nav-link" routerLink="/clientes/page/0">Clientes page</a>
       </li>
 
       <!-- <li class="nav-item">
