--- a/Angular/clientes-app/src/app/paginator/paginator.component.html
+++ b/Angular/clientes-app/src/app/paginator/paginator.component.html
@@ -1,1 +1,6 @@
-<p>paginator works!</p>
+<!-- *ngIf="paginas?.length > 0" -->
+<ul  class="pagination">
+  <li *ngFor="let pagina of paginas">
+    {{ pagina }}
+  </li>
+</ul>
