--- a/Angular/clientes-app/src/app/clientes/form/form.component.html
+++ b/Angular/clientes-app/src/app/clientes/form/form.component.html
@@ -1,4 +1,13 @@
 
+<!-- Muestra los errores del backend en la validación del formulario pero tambien se puede hacer desde Angular -->
+<!-- un error puede ser cuando se crea un cliente con nombre mayor a 12   -->
+<!--  *ngIf="errores?.length>0" -->
+<ul class="alert alert danger ">
+    <li *ngFor="let err of errores">
+        {{err}}
+    </li>
+</ul>
+
 <p>{{titulo}}</p>
 <!-- El evento (ngSubmit) se utiliza para detectar cuando se envía el formulario y llama al método que se requiera definido en el component.ts. 
 La directiva #clienteForm="ngForm" se utiliza para crear una referencia al formulario en el componente. -->
