--- a/Angular/clientes-app/src/app/clientes/detalle/detalle.component.html
+++ b/Angular/clientes-app/src/app/clientes/detalle/detalle.component.html
@@ -6,10 +6,10 @@
                 <!-- cuando se selecciona una foto se llama al metodo relacionado al change para obtener la foto seleccionada y guardarla en una variable -->
                 <input (change)="seleccionarFoto($event)" type="file" class="custom-file-input" id="inputGroupFile84"
                     aria-describedby="inputGroupFileAddon04">
-                <label class="custom-file-label" for="inputGroupFile04">Subir foto</label>
+                <label class="custom-file-label" for="inputGroupFile04">Seleccionar foto</label>
             </div>
             <div class="input-group-append">
-                <button (click)="subirFoto()" class="btn btn-outline-secondary" type="button" id="inputGroupFileAddon84">Button</button>
+                <button (click)="subirFoto()" class="btn btn-outline-secondary" type="button" id="inputGroupFileAddon84">Subir foto</button>
             </div>
         </div>
     </div>
