--- a/Angular/clientes-app/src/app/clientes/detalle/detalle.component.html
+++ b/Angular/clientes-app/src/app/clientes/detalle/detalle.component.html
@@ -1,15 +1,35 @@
 <div class="card bg-dark text-white">
     <div class="card-header">{{titulo}}</div>
     <div class="card-body">
-        <div class="input-group">
-            <div class="custom-file">
-                <!-- cuando se selecciona una foto se llama al metodo relacionado al change para obtener la foto seleccionada y guardarla en una variable -->
-                <input (change)="seleccionarFoto($event)" type="file" class="custom-file-input" id="inputGroupFile84"
-                    aria-describedby="inputGroupFileAddon04">
-                <label class="custom-file-label" for="inputGroupFile04">Seleccionar foto</label>
-            </div>
-            <div class="input-group-append">
-                <button (click)="subirFoto()" class="btn btn-outline-secondary" type="button" id="inputGroupFileAddon84">Subir foto</button>
+        <div class="container">
+            <div class="row">
+                <div class="col-sm text-dark">
+                    <ul class="list-group mb-3" *ngIf="cliente" >
+                        <li class="list-group-item active">Nombre : {{cliente.nombre}}</li>
+                        <li class="list-group-item ">Apellido : {{cliente.apellido}}</li>
+                        <li class="list-group-item ">Correo : {{cliente.email}}</li>
+                        <li class="list-group-item"> Fcha Creación: {{cliente.createAt | date: "fullDate"}}</li>
+                        <!-- | date: "fullDate" pipe para formatear la fecha -->
+                    </ul>
+
+                    <!-- Para subir la imagen -->
+                    <div class="input-group" style="margin-top: 20px; flex-wrap: nowrap;">
+                        <div class="custom-file" >
+                            <!-- cuando se selecciona una foto se llama al metodo relacionado al change para obtener la foto seleccionada y guardarla en una variable -->
+                            <input (change)="seleccionarFoto($event)" type="file" class="custom-file-input"
+                                id="inputGroupFile84" aria-describedby="inputGroupFileAddon04">
+                            <label class="custom-file-label" for="inputGroupFile04">Seleccionar foto</label>
+                        </div>
+                        <div class="input-group-append">
+                            <button (click)="subirFoto()" class="btn btn-outline-secondary" type="button" style="width: 100px;"
+                                id="inputGroupFileAddon84">Subir foto</button>
+                        </div>
+                    </div>
+                </div>
+                <!-- se muestra la imagen -->
+                <div class="col-sm">
+                    <img *ngIf="cliente?.foto" src="http://localhost:8080/api/cliente/img/{{cliente.foto}}" class="img-fluid rounded" alt="{{cliente.foto}}">
+                </div>
             </div>
         </div>
     </div>
