--- a/Angular/clientes-app/src/app/clientes/detalle/detalle.component.html
+++ b/Angular/clientes-app/src/app/clientes/detalle/detalle.component.html
@@ -1,41 +1,64 @@
-<div class="card bg-dark text-white">
-    <div class="card-header">{{titulo}}</div>
-    <div class="card-body">
-        <div class="container">
-            <div class="row">
-                <div class="col-sm text-dark">
-                    <ul class="list-group mb-3" *ngIf="cliente" >
-                        <li class="list-group-item active">Nombre : {{cliente.nombre}}</li>
-                        <li class="list-group-item ">Apellido : {{cliente.apellido}}</li>
-                        <li class="list-group-item ">Correo : {{cliente.email}}</li>
-                        <li class="list-group-item"> Fcha Creación: {{cliente.createAt | date: "fullDate"}}</li>
-                        <!-- | date: "fullDate" pipe para formatear la fecha -->
-                    </ul>
+<!-- Se valida que el modla exista, es decir que desde el servicio est+e true para mostrar -->
+<div class="abrir-modal" *ngIf="modalService.modal">
+    <div  class="modal" tabindex="-1" role="dialog" style="display: block;">
+        <div class="modal-dialog modal-lg" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">{{titulo}}</h5>
+                    <button (click)="cerrarModal()" type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-sm text-dark">
+                                <ul class="list-group mb-3" *ngIf="cliente">
+                                    <li class="list-group-item active">Nombre : {{cliente.nombre}}</li>
+                                    <li class="list-group-item ">Apellido : {{cliente.apellido}}</li>
+                                    <li class="list-group-item ">Correo : {{cliente.email}}</li>
+                                    <li class="list-group-item"> Fcha Creación: {{cliente.createAt | date: "fullDate"}}
+                                    </li>
+                                    <!-- | date: "fullDate" pipe para formatear la fecha -->
+                                </ul>
 
-                    <!-- Para subir la imagen -->
-                    <div class="input-group" style="margin-top: 20px; flex-wrap: nowrap;">
-                        <div class="custom-file" >
-                            <!-- cuando se selecciona una foto se llama al metodo relacionado al change para obtener la foto seleccionada y guardarla en una variable -->
-                            <input (change)="seleccionarFoto($event)" type="file" class="custom-file-input"
-                                id="inputGroupFile84" aria-describedby="inputGroupFileAddon04">
-                            <label class="custom-file-label" for="inputGroupFile04">Seleccionar foto</label>
-                        </div>
-                        <div class="input-group-append">
-                            <button (click)="subirFoto()" [disabled]="fotoSeleccionada.name==''" class="btn btn-outline-secondary" type="button" style="width: 100px;"
-                                id="inputGroupFileAddon84">Subir foto</button>
-                        </div>
-                    </div>
-                    <div *ngIf="progreso > 0" class="progress">
-                        <div class="progress-bar" role="progressbar" [ngStyle]="{'width': progreso+'%'}" attr.aria-valuenow="{{progreso}}" aria-valuemin="0" aria-valuemax="100">
-                            {{progreso}}%
+                                <!-- Para subir la imagen -->
+                                <div class="input-group" style="margin-top: 20px; flex-wrap: nowrap;">
+                                    <div class="custom-file">
+                                        <!-- cuando se selecciona una foto se llama al metodo relacionado al change para obtener la foto seleccionada y guardarla en una variable -->
+                                        <input (change)="seleccionarFoto($event)" type="file" class="custom-file-input"
+                                            id="inputGroupFile84" aria-describedby="inputGroupFileAddon04">
+                                        <label class="custom-file-label" for="inputGroupFile04">Seleccionar foto</label>
+                                    </div>
+                                    <div class="input-group-append">
+                                        <button (click)="subirFoto()" [disabled]="fotoSeleccionada.name==''"
+                                            class="btn btn-outline-secondary" type="button" style="width: 100px;"
+                                            id="inputGroupFileAddon84">Subir foto</button>
+                                    </div>
+                                </div>
+                                <div *ngIf="progreso > 0" class="progress">
+                                    <div class="progress-bar" role="progressbar" [ngStyle]="{'width': progreso+'%'}"
+                                        attr.aria-valuenow="{{progreso}}" aria-valuemin="0" aria-valuemax="100">
+                                        {{progreso}}%
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- se muestra la imagen -->
+                            <div class="col-sm">
+                                <img *ngIf="cliente?.foto" src="http://localhost:8080/api/cliente/img/{{cliente.foto}}"
+                                    class="img-fluid rounded" alt="{{cliente.foto}}">
+                            </div>
                         </div>
                     </div>
                 </div>
-                <!-- se muestra la imagen -->
-                <div class="col-sm">
-                    <img *ngIf="cliente?.foto" src="http://localhost:8080/api/cliente/img/{{cliente.foto}}" class="img-fluid rounded" alt="{{cliente.foto}}">
+                <div class="modal-footer">
+                    <button (click)="cerrarModal()" type="button" class="btn btn-secondary"
+                        data-dismiss="modal">Close</button>
                 </div>
             </div>
         </div>
     </div>
+
+
+
 </div>
