--- a/Angular/clientes-app/src/app/clientes/detalle/detalle.component.html
+++ b/Angular/clientes-app/src/app/clientes/detalle/detalle.component.html
@@ -1,5 +1,5 @@
 <!-- Se valida que el modla exista, es decir que desde el servicio est+e true para mostrar -->
-<div class="abrir-modal" *ngIf="modalService.modal">
+<div class="abrir-modal animacion fadeIn " *ngIf="modalService.modal">
     <div  class="modal" tabindex="-1" role="dialog" style="display: block;">
         <div class="modal-dialog modal-lg" role="document">
             <div class="modal-content">
