--- a/Angular/clientes-app/src/app/clientes/detalle/detalle.component.html
+++ b/Angular/clientes-app/src/app/clientes/detalle/detalle.component.html
@@ -43,7 +43,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <!-- se muestra la imagen -->
+                            <!-- se muestra la imagen que viene desde el servidor -->
                             <div class="col-sm">
                                 <img *ngIf="cliente?.foto" src="http://localhost:8080/api/cliente/img/{{cliente.foto}}"
                                     class="img-fluid rounded" alt="{{cliente.foto}}">
