Se agrega el campo para ver la region del usuario seleccionado

--- a/Angular/clientes-app/src/app/clientes/detalle/detalle.component.html
+++ b/Angular/clientes-app/src/app/clientes/detalle/detalle.component.html
@@ -17,6 +17,7 @@
                                     <li class="list-group-item active">Nombre : {{cliente.nombre}}</li>
                                     <li class="list-group-item ">Apellido : {{cliente.apellido}}</li>
                                     <li class="list-group-item ">Correo : {{cliente.email}}</li>
+                                    <li class="list-group-item ">Region : {{cliente.region.nombre}}</li>
                                     <li class="list-group-item"> Fcha Creación: {{cliente.createAt | date: "fullDate"}}
                                     </li>
                                     <!-- | date: "fullDate" pipe para formatear la fecha -->
