--- a/Angular/clientes-app/src/app/header/header.component.html
+++ b/Angular/clientes-app/src/app/header/header.component.html
@@ -44,10 +44,12 @@
       </li> -->
     </ul>
 
-    <form class="form-inline my-4 my-lg-3">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-5 my-sm-0" type="submit">Search</button>
-    </form>
+    <!-- Login -->
+    <ul class="navbar-nav navbar-right">
+      <li >
+        <a class="btn btn-outline-primary" routerLink="/login">Login</a>
+      </li>
+    </ul>
 
   </div>
 </nav>
