Se meustra la lista de facturas

--- a/Angular/clientes-app/src/app/clientes/detalle/detalle.component.html
+++ b/Angular/clientes-app/src/app/clientes/detalle/detalle.component.html
@@ -1,6 +1,7 @@
 <!-- Se valida que el modla exista, es decir que desde el servicio est+e true para mostrar -->
+
 <div class="abrir-modal animacion fadeIn " *ngIf="modalService.modal">
-    <div  class="modal" tabindex="-1" role="dialog" style="display: block;">
+    <div class="modal modal-dialog modal-dialog-centered modal-dialog-scrollable modal-lg" tabindex="-1" role="dialog" style="display: block;">
         <div class="modal-dialog modal-lg" role="document">
             <div class="modal-content">
                 <div class="modal-header">
@@ -11,6 +12,31 @@
                 </div>
                 <div class="modal-body">
                     <div class="container">
+                        <!-- Se pone de primero porque si se pone de  ultimas no se muestra por el tamaño -->
+                        <div class="row">
+                            <div class="alert alert-info my-4" *ngIf="cliente.facturas.length==0">
+                                No hay facturas asignadas para el cliente {{cliente.nombre}} {{cliente.apellido}}
+                            </div>
+                            
+                            <table class="table table-bordered table-striped my-4" *ngIf="cliente.facturas.length>0">
+                                <thead>
+                                    <tr>
+                                        <th>folio</th>
+                                        <th>descripción</th>
+                                        <th>fecha</th>
+                                        <th>total</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr *ngFor="let factura of cliente.facturas">
+                                        <td>{{factura.id}}</td>
+                                        <td>{{factura.descripcion}}</td>
+                                        <td>{{factura.createAt}}</td>
+                                        <td>{{factura.total}}</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
                         <div class="row">
                             <div class="col-sm text-dark">
                                 <ul class="list-group mb-3" *ngIf="cliente">
@@ -49,6 +75,7 @@
                                 <img *ngIf="cliente?.foto" src="http://localhost:8080/api/cliente/img/{{cliente.foto}}"
                                     class="img-fluid rounded" alt="{{cliente.foto}}">
                             </div>
+                            
                         </div>
                     </div>
                 </div>
