--- a/Angular/clientes-app/src/app/clientes/detalle/detalle.component.html
+++ b/Angular/clientes-app/src/app/clientes/detalle/detalle.component.html
@@ -1,8 +1,12 @@
 <!-- Se valida que el modla exista, es decir que desde el servicio est+e true para mostrar -->
 
+<style>
+
+</style>
 <div class="abrir-modal animacion fadeIn " *ngIf="modalService.modal">
-    <div class="modal modal-dialog modal-dialog-centered modal-dialog-scrollable modal-lg" tabindex="-1" role="dialog" style="display: block;">
-        <div class="modal-dialog modal-lg" role="document">
+    <div class="modal modal-dialog modal-dialog-centered modal-dialog-scrollable modal-lg" tabindex="-1" role="dialog"
+        style="display:block;">
+        <div class="modal-dialog modal-lg modal-dialog-scrollable" role="document">
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title">{{titulo}}</h5>
@@ -17,14 +21,14 @@
                             <div class="alert alert-info my-4" *ngIf="cliente.facturas.length==0">
                                 No hay facturas asignadas para el cliente {{cliente.nombre}} {{cliente.apellido}}
                             </div>
-                            
-                            <table class="table table-bordered table-striped my-4" *ngIf="cliente.facturas.length>0">
-                                <thead>
+
+                            <table class="table table-bordered table-striped my-4" *ngIf="cliente && cliente.facturas.length>0">                                <thead>
                                     <tr>
                                         <th>folio</th>
                                         <th>descripción</th>
                                         <th>fecha</th>
                                         <th>total</th>
+                                        <th>Detalle</th>
                                     </tr>
                                 </thead>
                                 <tbody>
@@ -33,6 +37,11 @@
                                         <td>{{factura.descripcion}}</td>
                                         <td>{{factura.createAt}}</td>
                                         <td>{{factura.total}}</td>
+                                        <td>
+                                            <button [routerLink]="['/facturas', factura.id]" type="button"
+                                                class="btn btn-primary btn-sm">Ver detalle
+                                            </button>
+                                        </td>
                                     </tr>
                                 </tbody>
                             </table>
@@ -75,7 +84,7 @@
                                 <img *ngIf="cliente?.foto" src="http://localhost:8080/api/cliente/img/{{cliente.foto}}"
                                     class="img-fluid rounded" alt="{{cliente.foto}}">
                             </div>
-                            
+
                         </div>
                     </div>
                 </div>
