--- a/Angular/clientes-app/src/app/facturas/facturas.component.html
+++ b/Angular/clientes-app/src/app/facturas/facturas.component.html
@@ -1,1 +1,35 @@
-<p>facturas works!</p>
+<div class="card bg-light">
+    <div class="card-header">{{titulo}}: {{factura.descripcion}}</div>
+    <div class="card-body">
+        <h4 class="card-title">
+            <a class="btn btn-light btn-xs">&laquo; volver</a>
+        </h4>
+        <form>
+            <!-- Solo para mostrar el nombre del cliente que hace la factura -->
+            <!-- Valida si el usuario está disponible para mostrar, porque el componente es de forma asincrona y se puede mostrar primero el componete y despues la informacion   -->
+            <div class="form-group row" *ngIf="factura.cliente">
+                <label for="nombreCliente" class="col-sm-2 col-form-label">Nombre del cliente</label>
+                <div class="col-sm-6">
+                    <input type="text" name="nombreCliente"  value="{{factura.cliente.nombre}} {{factura.cliente.apellido}}" class="form-control" disabled>
+                </div>
+            </div>
+            <div class="form-group row">
+                <label for="descripcion" class="col-sm-2 col-form-label">Descripcion</label>
+                <div class="col-sm-6">
+                    <input type="text" name="descripcion" [(ngModel)]="factura.descripcion" class="form-control">
+                </div>
+            </div>
+            <div class="form-group row">
+                <label for="observacion" class="col-sm-2 col-form-label">observacion</label>
+                <div class="col-sm-6">
+                    <textarea name="observacion"  [(ngModel)]="factura.observacion"class="form-control"></textarea>
+                </div>
+            </div>
+            <div class="form-group row">
+                <div class="col-sm-6">
+                    <input type="submit"  value="Crear factura" class="btn btn-secondary">
+                </div>
+            </div>
+        </form>
+    </div>
+</div>
