--- a/Angular/clientes-app/src/app/facturas/facturas.component.html
+++ b/Angular/clientes-app/src/app/facturas/facturas.component.html
@@ -10,7 +10,8 @@
             <div class="form-group row" *ngIf="factura.cliente">
                 <label for="nombreCliente" class="col-sm-2 col-form-label">Nombre del cliente</label>
                 <div class="col-sm-6">
-                    <input type="text" name="nombreCliente"  value="{{factura.cliente.nombre}} {{factura.cliente.apellido}}" class="form-control" disabled>
+                    <input type="text" name="nombreCliente"
+                        value="{{factura.cliente.nombre}} {{factura.cliente.apellido}}" class="form-control" disabled>
                 </div>
             </div>
             <div class="form-group row">
@@ -19,17 +20,37 @@
                     <input type="text" name="descripcion" [(ngModel)]="factura.descripcion" class="form-control">
                 </div>
             </div>
+            <!-- Autocomplete usando Angular Material  pero no está funcionando por el momento
+            https://material.angular.io/components/autocomplete/examples
+            se puede investigar mas
+            -->
+            <div class="form-group row">
+                <div class="col-sm-6">
+                    <mat-form-field class="example-full-width">
+                        <mat-label>Number</mat-label>
+                        <input type="text" placeholder="Pick one" aria-label="Number" matInput [formControl]="myControl"
+                            [matAutocomplete]="auto">
+                        <mat-autocomplete autoActiveFirstOption #auto="matAutocomplete">
+                            <mat-option *ngFor="let option of filteredOptions | async" [value]="option">
+                                {{option}}
+                            </mat-option>
+                        </mat-autocomplete>
+                    </mat-form-field>
+                </div>
+            </div>
             <div class="form-group row">
                 <label for="observacion" class="col-sm-2 col-form-label">observacion</label>
                 <div class="col-sm-6">
-                    <textarea name="observacion"  [(ngModel)]="factura.observacion"class="form-control"></textarea>
+                    <textarea name="observacion" [(ngModel)]="factura.observacion" class="form-control"></textarea>
                 </div>
             </div>
             <div class="form-group row">
                 <div class="col-sm-6">
-                    <input type="submit"  value="Crear factura" class="btn btn-secondary">
+                    <input type="submit" value="Crear factura" class="btn btn-secondary">
                 </div>
             </div>
         </form>
+
+
     </div>
 </div>
