--- a/Angular/clientes-app/src/app/facturas/facturas.component.html
+++ b/Angular/clientes-app/src/app/facturas/facturas.component.html
@@ -30,7 +30,7 @@
                         <mat-label>Number</mat-label>
                         <input type="text" placeholder="Pick one" aria-label="Number" matInput [formControl]="myControl"
                             [matAutocomplete]="auto">
-                        <mat-autocomplete autoActiveFirstOption #auto="matAutocomplete">
+                        <mat-autocomplete autoActiveFirstOption #auto="matAutocomplete" (optionSelected)="seleccionarProducto($event)">
                             <mat-option *ngFor="let option of filteredOptions | async" [value]="option">
                                 {{option}}
                             </mat-option>
