--- a/Angular/clientes-app/src/app/facturas/facturas.component.html
+++ b/Angular/clientes-app/src/app/facturas/facturas.component.html
@@ -36,12 +36,23 @@
                             </mat-option>
                         </mat-autocomplete>
                     </mat-form-field>
+                     <!-- Actualizando la cantidad de un item de la factura -->
+                     <!-- Incrementando la cantidad si el producto existe en el detalle -->
+                     <!-- El metodo para calcular el total del item (importe) se enceunta en la clase ItemFactura  -->
+
                 </div>
             </div>
             <div class="form-group row">
                 <label for="observacion" class="col-sm-2 col-form-label">observacion</label>
                 <div class="col-sm-6">
                     <textarea name="observacion" [(ngModel)]="factura.observacion" class="form-control"></textarea>
+                </div>
+            </div>
+            <!-- Gran total que está en la clase factura, se muestra en un <p> -->
+            <div class="form-group row">
+                <label for="granTotal" class="col-sm-2 col-form-label">Gran total</label>
+                <div class="col-sm-6">
+                    <p class="form-control">{{factura.calcularGranTotal()}}</p>
                 </div>
             </div>
             <div class="form-group row">
